updated propertyfrorm to apartmentform, added villa and resort form, updated responsive home page

--- a/client/src/components/Steps/steps.css
+++ b/client/src/components/Steps/steps.css
@@ -58,3 +58,16 @@
     font-weight: bold;
     margin-right: 10px;
 }
+
+@media screen and (max-width: 600px) {
+    .step-wrapper>h2 {
+        font-size: 28px;
+        font-weight: 500;
+        margin-bottom: 3rem;
+    }
+
+    .step {
+        margin-bottom: 0px;
+        margin-top: 0px;
+    }
+}
