--- a/client/src/components/testimonial/testimonial.css
+++ b/client/src/components/testimonial/testimonial.css
@@ -51,6 +51,14 @@
   background-color: #000;
 }
 
+@media screen and (max-width: 600px){
+  .testimonial-slider h2 {
+    font-size: 28px;
+    font-weight: 500;
+    margin-bottom: 3rem;
+  }
+}
+
 @media screen and (max-width: 480px){
   .testimonial-slider {
      width: 100%;
