--- a/client/src/components/modal/reserveShares/ReserveShares.css
+++ b/client/src/components/modal/reserveShares/ReserveShares.css
@@ -1,114 +1,76 @@
 .reserveShare-form-wrap {
-  background-image: url("https://media.istockphoto.com/id/1130829500/photo/estate-agent-giving-house-keys-to-woman-and-sign-agreement-in-office.jpg?s=612x612&w=0&k=20&c=VGYhD1p0ksmb1xOqPmXqXt1FpHGNpLrfZCTsrYuBSgI=");
-  
-  background-size: cover;
-  background-position: center;
-  /* padding: 40px; */
-  border-radius: 12px;
-  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
-  backdrop-filter: blur(8px);
-}
-
-.reserveShare-form-wrap > section {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
-}
-
-.reserveShare-form-wrap h6 {
-  padding-left: 1rem;
-  padding-top: 1rem;
-  font-family: "Montserrat", sans-serif;
-  font-size: 25px;
-  font-weight: 700;
-  margin-bottom: 20px;
-  color: #ffffff;
-}
-
-.reserveShare-form-wrap p {
-  font-family: "Montserrat", sans-serif;
-  font-size: 18px;
-  margin-bottom: 12px;
-  color: #ffffff;
-}
-
-.reserveShare-form-wrap form {
   padding: 1rem;
+  margin-top: 2rem;
+  background-image: linear-gradient(to top, #d9afd9 0%, #97d9e1 100%);
+}
+.reserveShare-form-wrap form .section1,
+.reserveShare-form-wrap form .section2 {
   display: flex;
-  flex-direction: column;
+  gap: 0.5rem;
 }
 
-.reserveShare-form-wrap input,
-.reserveShare-form-wrap select {
-  padding: 16px;
-  margin-bottom: 16px;
-  border: none;
-  border-radius: 8px;
-  background-color: rgba(0, 0, 0, 0.6);
-  color: #ffffff;
-  font-family: "Montserrat", sans-serif;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+.reserveShare-form-wrap form .section2 {
+  margin-top: 1rem;
+}
+.reserveShare-form-wrap form .section1 input,
+.reserveShare-form-wrap form .section2 input {
+  width: 50%;
+  outline: none;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
 }
 
-.reserveShare-form-wrap select {
-  appearance: none;
-  -webkit-appearance: none;
-}
-
-.reserveShare-form-wrap .section1,
-.reserveShare-form-wrap .section2 {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 10px;
-}
-
-.reserveShare-form-wrap .section3,
-.reserveShare-form-wrap .section4,
-.reserveShare-form-wrap .section6 {
+.reserveShare-form-wrap .section3 {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  margin-bottom: 16px;
+  margin-top: 2rem;
 }
 
-.reserveShare-form-wrap .section4 label{
-  color: #ffff;
-  font-size: 18px;
+.reserveShare-form-wrap .section3 p {
+  font-size: 1.1rem;
+}
+
+.reserveShare-form-wrap .section4 {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+
+.reserveShare-form-wrap .section4 label {
+  font-size: 1.2rem;
 }
 
 .reserveShare-form-wrap .section4 select {
-  width: 25%;
+  width: 7rem;
+}
+
+.reserveShare-form-wrap .section6 {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2rem;
+}
+
+.reserveShare-form-wrap .section6 p {
+  font-size: 1rem;
+  font-weight: bold;
 }
 
 .reserveShare-form-wrap .section5 {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 .reserveShare-form-wrap .section5 button {
-  padding: 14px 28px;
-  background-color: #ffffff;
-  color: #000000;
-  border: 2px solid #ffffff;
-  border-radius: 8px;
-  font-family: "Montserrat", sans-serif;
-  font-size: 18px;
-  font-weight: 600;
-  transition: background-color 0.3s ease-in-out;
+  margin-top: 2rem;
 }
 
-.reserveShare-form-wrap .section5 button:hover {
-  background-color: #000000;
-  color: #ffffff;
-}
+@media only screen and (max-width: 600px) {
+  .reserveShare-form-wrap .section4 label {
+    font-size: 1.2rem;
+    width: 70%;
+  }
 
-.reserveShare-form-wrap .section6 p {
-  font-family: "Montserrat", sans-serif;
-  font-size: 18px;
-  color: #ffffff;
-}
-
-.reserveShare-form-wrap .section6 p svg {
-  vertical-align: middle;
-  margin-right: 6px;
+  .reserveShare-form-wrap .section4 select {
+    width: 7rem;
+  }
 }
