--- a/client/src/components/website-details/why-us/WhyUs.css
+++ b/client/src/components/website-details/why-us/WhyUs.css
@@ -114,7 +114,7 @@
     .whyus-wrapper {
         /* background-color: red; */
         padding: 1rem;
-        margin-top: 1rem;
+        margin-top: 5rem;
     }
 
     .whyus-wrapper .title {
@@ -131,12 +131,17 @@
     }
 
     .whyus-wrapper .card-wrapper-inner .card {
+        margin-top: 2rem;
         width: 90%;
         display: flex;
         flex-direction: column;
         text-align: center;
         padding: 20rem auto;
         border: none;
+    }
+
+    .whyus-wrapper .card-wrapper-inner .card:last-child{
+        margin-top: 2rem;
     }
 
     .whyus-wrapper .card-wrapper-inner .card .img-wrapper {
