added channel partnet page with slider mad on react slick

--- a/client/src/components/products-landingPages/shop/Shop.css
+++ b/client/src/components/products-landingPages/shop/Shop.css
@@ -1,5 +1,5 @@
 .shop-page-container .bg-image {
-    background-image: url("https://images.pexels.com/photos/2079438/pexels-photo-2079438.jpeg?auto=compress&cs=tinysrgb&w=600");
+    background-image: url("https://images.pexels.com/photos/297743/pexels-photo-297743.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
     background-position: center center;
     background-size: cover;
     height: 720px;
