--- a/client/src/components/products-landingPages/villa/villa.css
+++ b/client/src/components/products-landingPages/villa/villa.css
@@ -1,31 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Domine:wght@500&display=swap');
+
 .villa-page-container .bg-image {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-image: url("https://images.pexels.com/photos/53610/large-home-residential-house-architecture-53610.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
-  /* background-image: url("../../../assets/villa.jpg"); */
-  background-position: center center;
-  background-size: cover;
   height: 720px;
   position: relative;
-  margin-bottom: 5rem;
+  background-size: cover;
+  background-position: center center;
+  background-image: url("../../../assets/villa.jpg");
 }
 
-.villa-page-container .bg-image h2{
-  color: rgb(0, 0, 0);
-  font-family: 'Playfair Display', serif;
-  font-size: 45px;
+.villa-page-container > section {
+  margin-top: 2rem;
 }
 
 .villa-page-container section h4 {
-  padding-left: 1rem;
+  color: #334155;
+  padding-left: 20px;
+  font-family: 'Domine', serif;
 }
 
-.villa-page-container .villa-card-container {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  background-color: white;
-  margin-top: 2rem;
+.villa-card-container {
+  display: grid;
+  margin: 0 20px;
+  margin-bottom: 2rem;
+  border-radius: 10px;
+  background-color: #f1f5f9;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+@media screen and (max-width: 700px) {
+  .villa-card-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
