--- a/client/src/components/mini-cards/villa/villacard.css
+++ b/client/src/components/mini-cards/villa/villacard.css
@@ -1,23 +1,13 @@
-.villa-card-container {
-  /* border: 1px solid black; */
-  width: 80%;
-  background-color: #f3f3f3;
-  margin: auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-}
-
 .villa-card {
-  width: 30%;
-  height: fit-content;
-  border: 1px solid rgb(239, 235, 235);
+  margin: 2rem;
   border-radius: 1rem;
-  margin: 1rem;
+  background-color: #ffff;
 }
 
 .villa-card-ub {
   display: flex;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
   justify-content: space-between;
 }
 
@@ -35,6 +25,7 @@
 
 .villa-card-ub div .view-villa-details-btn {
   width: 7rem;
+  margin: .5rem;
 }
 
 .villa-card-ub p img {
@@ -58,8 +49,6 @@
 
 .villa-card {
   height: fit-content;
-  margin-bottom: 3rem;
-  border-radius: 10px;
 }
 
 .villa-card-lb {
@@ -85,6 +74,13 @@
 .villa-card-lb div section p:first-child {
   font-size: 0.9rem;
 }
+
+@media screen and (max-width: 700px) {
+  .villa-card-lb div section p:first-child {
+    font-size: small;
+  }
+}
+
 .villa-card-lb div section:last-child {
   border: 0;
 }
@@ -109,7 +105,7 @@
   background-color: white;
 }
 
-.villa-card .footer-section > div {
+.villa-card .footer-section>div {
   margin-top: 1rem;
 }
 
@@ -127,114 +123,4 @@
 
 .villa-card .contact-btn-wrap button {
   width: 100%;
-}
-
-@media only screen and (max-width: 680px) {
-  .villa-card {
-    width: 98%;
-    margin-top: 1rem;
-    background-color: white;
-    border: 1px solid rgb(239, 235, 235);
-    border-radius: 1rem;
-    padding-bottom: 2rem;
-    /* border: 1px solid black; */
-  }
-
-  .villa-card-ub {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .villa-card-ub div {
-    margin-top: 100%;
-    /* border: 1px solid red; */
-    width: 100%;
-  }
-
-  .villa-card-ub .details-btn-wrap {
-    /* border: 1px solid black; */
-    display: flex;
-    justify-content: flex-end;
-  }
-
-  .villa-card-ub div .view-villa-details-btn {
-    width: 7rem;
-  }
-
-  .villa-card-ub p img {
-    width: 100%;
-  }
-
-  .villa-card-ub .villa-name {
-    color: black;
-    text-shadow: 2px 2px 2px white;
-    font-size: 17px;
-    text-transform: uppercase;
-    font-weight: 700;
-    margin-top: 3rem;
-  }
-
-  .villa-card-ub .villa-location {
-    color: #ffff;
-    font-size: 14px;
-    font-weight: 500;
-  }
-
-  .villa-card {
-    height: 600px;
-    margin-bottom: 3rem;
-    border-radius: 10px;
-  }
-
-  .villa-card-lb {
-    height: 25%;
-    background-color: #ffff;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    padding-top: 2rem;
-  }
-
-  .villa-card-lb div {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .villa-card-lb div:last-child {
-    display: flex;
-  }
-
-  .villa-card-lb div:last-child section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-right: 1px solid lightgrey;
-    padding: 0.5rem;
-    text-align: center;
-  }
-
-  .villa-card-lb div:last-child section:last-child {
-    border: 0;
-  }
-
-  .villa-card-lb div:last-child section .dummy-border {
-    height: 1px;
-    width: 75%;
-    background-color: goldenrod;
-  }
-
-  .villa-card .footer-section {
-    background-color: white;
-  }
-
-  .villa-card .footer-section > div {
-    padding: 1rem 1rem 0 1.5rem;
-  }
-
-  .villa-card .reserve-share-btn-wrap {
-    width: 100%;
-  }
-
-  .villa-card .reserve-share-btn-wrap button {
-    width: 100%;
-  }
 }
