--- a/client/src/components/products-landingPages/villa/villa.css
+++ b/client/src/components/products-landingPages/villa/villa.css
@@ -2,20 +2,21 @@
 
 .villa-page-container .bg-image {
   height: 720px;
+  margin-bottom: 0;
   position: relative;
   background-size: cover;
   background-position: center center;
-  background-image: url("../../../assets/villa.jpg");
-}
-
-.villa-page-container > section {
-  margin-top: 2rem;
+  background-image: url("https://images.pexels.com/photos/565324/pexels-photo-565324.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
 }
 
 .villa-page-container section h4 {
   color: #334155;
   padding-left: 20px;
   font-family: 'Domine', serif;
+}
+
+.villa-page-container>section {
+  margin-top: 2rem;
 }
 
 .villa-card-container {
