--- a/client/src/components/products-landingPages/car/Car.css
+++ b/client/src/components/products-landingPages/car/Car.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Domine:wght@500&display=swap');
+
 :root {
   --white-font: white;
   --black-font: black;
@@ -6,12 +8,11 @@
   --light-btn: #d3d3d4;
 }
 
-.car-landing-page-wrapper {
-}
+.car-landing-page-wrapper {}
 
 .car-landing-page-wrapper .banner-section {
   width: 100%;
-  height: 40rem;
+  height: calc(100vh - 5rem);
   background-image: url("https://wallpapercave.com/wp/wp2707576.jpg");
   background-position: center center;
   background-repeat: no-repeat;
@@ -32,12 +33,15 @@
 .car-landing-page-wrapper .banner-section .content h1 {
   font-size: 4rem;
   letter-spacing: 2px;
+  color: var(--white-font);
+  font-family: 'Domine', serif;
   text-shadow: 1px 1px 1px rgb(0, 0, 0);
 }
 
 .car-landing-page-wrapper .banner-section .content h6 {
   font-size: 2rem;
   letter-spacing: 2px;
+  font-family: 'Domine', serif;
 }
 
 .car-landing-page-wrapper .row2 {
@@ -47,8 +51,13 @@
 }
 
 .car-landing-page-wrapper .row2 h2 {
+  color: #475569;
   text-align: center;
-  letter-spacing: 2px;
+  font-family: 'Domine', serif;
+}
+
+.car-landing-page-wrapper .row2 h2 span {
+  color: #ea580c;
 }
 
 .car-landing-page-wrapper .row2 .cards-wrap {
@@ -70,9 +79,11 @@
   border: 0;
   background-color: antiquewhite;
 }
+
 .car-landing-page-wrapper .row2 .card .icon-wrap {
   /* border: 1px solid black; */
 }
+
 .car-landing-page-wrapper .row2 .card .icon-wrap .icon {
   font-size: 7rem;
   color: rgb(3, 42, 88);
@@ -98,48 +109,52 @@
 .car-landing-page-wrapper .only-heading {
   width: 100%;
   margin: auto;
-  text-align: center;
   margin-top: 4rem;
-  padding-bottom: 0.5rem;
+  text-align: center;
   padding-top: 0.5rem;
-  /* background-color: aliceblue; */
+  padding-bottom: 0.5rem;
   border-bottom: 1px solid rgb(217, 217, 217);
 }
 
 .car-landing-page-wrapper .all-cars-wrapper {
   width: 100%;
+  gap: 0.7rem;
   margin: auto;
+  padding: 1rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 0.7rem;
-  padding: 1rem;
-  /* border: 1px solid black; */
 }
 
 .car-landing-page-wrapper h1 {
-  text-align: center;
   margin-top: 2rem;
+  color: #475569;
+  text-align: center;
+  font-family: 'Domine', serif;
+}
+
+.car-landing-page-wrapper h1 span {
+  color: #ea580c;
 }
 
 .car-landing-page-wrapper .section3 {
-  /* background-color: lightgrey; */
   display: flex;
-  margin-top: 5rem;
+  margin-top: 2rem;
 }
 
 .car-landing-page-wrapper .section3 .col1 {
+  gap: 1rem;
   width: 50%;
   display: flex;
   justify-content: flex-end;
-  gap: 1rem;
-  /* border: 1px solid black; */
 }
 
 .car-landing-page-wrapper .section3 .col1 .img-wrap {
-  /* border: 1px solid red; */
-  padding: 2rem 2rem 2rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
 .car-landing-page-wrapper .section3 .col1 .img-wrap img {
   height: 20rem;
 }
@@ -147,7 +162,6 @@
 .car-landing-page-wrapper .section3 .col2 {
   width: 50%;
   padding-left: 1rem;
-  /* border: 1px solid red; */
 }
 
 .car-landing-page-wrapper .section3 .col2 .button-wrap {
@@ -173,10 +187,12 @@
   background-color: var(--light-btn);
   color: var(--black-font);
 }
+
 .car-landing-page-wrapper .section3 .col2 .button-wrap div:nth-child(3n + 5) {
   background-color: var(--medium-btn);
   color: var(--white-font);
 }
+
 .car-landing-page-wrapper .section3 .col2 .button-wrap div:first-child,
 .car-landing-page-wrapper .section3 .col2 .button-wrap div:nth-child(2),
 .car-landing-page-wrapper .section3 .col2 .button-wrap div:nth-child(3),
@@ -250,9 +266,11 @@
     border: 0;
     background-color: antiquewhite;
   }
+
   .car-landing-page-wrapper .row2 .card .icon-wrap {
     /* border: 1px solid black; */
   }
+
   .car-landing-page-wrapper .row2 .card .icon-wrap .icon {
     font-size: 7rem;
     color: rgb(3, 42, 88);
@@ -321,6 +339,7 @@
     /* border: 1px solid red; */
     padding: 0rem 2rem 2rem 0;
   }
+
   .car-landing-page-wrapper .section3 .col1 .img-wrap img {
     height: 20rem;
   }
@@ -355,15 +374,39 @@
     background-color: var(--light-btn);
     color: var(--black-font);
   }
+
   .car-landing-page-wrapper .section3 .col2 .button-wrap div:nth-child(3n + 5) {
     background-color: var(--medium-btn);
     color: var(--white-font);
   }
+
   .car-landing-page-wrapper .section3 .col2 .button-wrap div:first-child,
   .car-landing-page-wrapper .section3 .col2 .button-wrap div:nth-child(2),
   .car-landing-page-wrapper .section3 .col2 .button-wrap div:nth-child(3),
   .car-landing-page-wrapper .section3 .col2 .button-wrap div:nth-child(3n + 1) {
     background-color: var(--dark-btn);
     color: var(--white-font);
+  }
+}
+
+/* CAR - Fractional & Rental */
+.car-cards h4 {
+  color: #334155;
+  margin-top: 2rem;
+  margin-left: 20px;
+  font-family: 'Domine', serif;
+}
+
+.car-card-container {
+  display: grid;
+  margin: 0 20px;
+  border-radius: 10px;
+  background-color: #f1f5f9;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+@media screen and (max-width: 700px) {
+  .car-card-container {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
