--- a/client/src/components/products-landingPages/villa/villa.css
+++ b/client/src/components/products-landingPages/villa/villa.css
@@ -1,17 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Domine:wght@500&display=swap');
 
 .villa-page-container .bg-image {
-  height: 720px;
   margin-bottom: 0;
   position: relative;
   background-size: cover;
+  height: calc(100vh - 5rem);
   background-position: center center;
   background-image: url("https://images.pexels.com/photos/565324/pexels-photo-565324.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
 }
 
 .villa-page-container section h4 {
   color: #334155;
-  padding-left: 20px;
+  margin-left: 20px;
   font-family: 'Domine', serif;
 }
 
@@ -22,7 +22,6 @@
 .villa-card-container {
   display: grid;
   margin: 0 20px;
-  margin-bottom: 2rem;
   border-radius: 10px;
   background-color: #f1f5f9;
   grid-template-columns: repeat(2, 1fr);
