--- a/client/src/components/website-details/DLBrochure/DLBrochure.css
+++ b/client/src/components/website-details/DLBrochure/DLBrochure.css
@@ -1,5 +1,5 @@
 .brochure-slider {
-    margin: 20px;
+    margin: 30px 20px;
     overflow: hidden;
     position: relative;
     border-radius: 5px;
