--- a/client/src/components/app-bar/AppNavbar.css
+++ b/client/src/components/app-bar/AppNavbar.css
@@ -1,253 +1,101 @@
-.app-bar {
-    width: 100%;
-    z-index: 100 !important;
-    /* border: 1px solid black; */
-    margin-bottom: auto;
-    position: fixed;
-    top: 0%;
-    height: 5rem;
-    padding-top: 1rem;
-  }
-  
-  /* desktop navbar */
-  
-  .app-bar .desktop-section {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .app-bar .desktop-section .appbar-col-1 {
-    height: fit-content;
-    margin-top: 0.4rem;
-    margin-bottom: 0.3rem;
-  }
-  /* landing-pages-dropdown */
-  .app-bar .desktop-section .appbar-col-1 #landing-pages-dropdown button {
-    margin-left: 1rem;
-  }
-  
-  .app-bar .desktop-section .appbar-col-1 #landing-pages-dropdown .dropdown-menu {
-    width: 20rem;
-    margin-left: 1rem;
-  }
-  
-  .app-bar
-    .desktop-section
-    .appbar-col-1
-    #landing-pages-dropdown
-    .dropdown-menu
-    div
-    p {
-    color: white;
-    text-transform: capitalize;
-    cursor: pointer;
-    padding-left: 1rem;
-  }
-  
-  .app-bar
-    .desktop-section
-    .appbar-col-1
-    #landing-pages-dropdown
-    .dropdown-menu
-    div
-    p:hover {
-    color: black;
-    background-color: white;
-  }
-  
-  /* landing-pages-dropdown ends */
-  .app-bar .desktop-section .appbar-col-2 .menu {
-    display: none;
-  }
-  
-  .app-bar .desktop-section .appbar-col-2 .col-2-box {
-    /* border:1px solid black; */
-    height: 100%;
-    display: flex;
-  }
-  
-  .app-bar .desktop-section .appbar-col-2 .col-2-box .btn-item {
-    /* border:1px solid black; */
-    height: 2rem;
-    margin: auto;
-    margin-inline-end: 1rem;
-    color: white;
-    font-size: 0.9rem;
-    font-family: "Nunito Sans", Arial, sans-serif;
-    font-weight: bold;
-    letter-spacing: 3px;
-  }
-  
-  .app-bar .desktop-section .appbar-col-2 .col-2-box .btn-item:last-child {
-    /* border: 1px solid black; */
-    font-size: 0.9rem;
-    padding: 0.2rem;
-    background-color: black;
-    color: white;
-    font-weight: bold;
-    padding: 1rem 1rem;
-  }
-  
-  .app-bar .desktop-section .appbar-col-2 .col-2-box .btn-item:hover {
-    background-color: rgb(212, 123, 103);
-    outline: none;
-    border: none;
-    color: black;
-  }
-  
-  .app-bar .desktop-section .appbar-col-2 .col-2-box .dropdown {
-    margin-top: 0.3rem;
-    padding-right: 1rem;
-  }
-  
-  .app-bar .desktop-section .appbar-col-2 .col-2-box .dropdown button {
-    color: white;
-  }
-  
-  .app-bar .desktop-section .appbar-col-2 .col-2-box .dropdown .dropdown-menu {
-    background-color: black;
-    color: white;
-    margin-top: 0rem;
-  }
-  
-  .app-bar
-    .desktop-section
-    .appbar-col-2
-    .col-2-box
-    .dropdown
-    .dropdown-menu
-    div {
-    width: 15rem;
-  }
-  
-  .app-bar
-    .desktop-section
-    .appbar-col-2
-    .col-2-box
-    .dropdown
-    .dropdown-menu
-    div
-    p {
-    cursor: pointer;
-    height: 2rem;
-    padding-left: 1rem;
-    padding-top: 0.2rem;
-    text-transform: capitalize;
-  }
-  
-  .app-bar
-    .desktop-section
-    .appbar-col-2
-    .col-2-box
-    .dropdown
-    .dropdown-menu
-    div
-    p:hover {
-    background-color: white;
-    color: black;
-  }
-  
-  @media only screen and (max-width: 900px) {
-    .app-bar {
-      width: 100%;
-      z-index: 10;
-      /* border: 1px solid black; */
-      margin: auto;
-      position: fixed;
-      padding: 1rem 0rem;
-    }
-  
-    /* desktop navbar */
-  
-    .app-bar .desktop-section {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 0.5rem;
-    }
-  
-    .app-bar .desktop-section .appbar-col-1 {
-      height: fit-content;
-      margin-top: 0rem;
-      margin-bottom: 0rem;
-    }
-  
-    .app-bar .desktop-section .appbar-col-1 .logoWrapper {
-      width: 8rem;
-      height: 4rem;
-      margin-left: 0rem;
-      display: none;
-    }
-  
-    .app-bar .desktop-section .appbar-col-1 .title {
-      display: block;
-      /* border: 1px solid black; */
-      font-family: "calibri";
-      font-size: larger;
-      font-weight: bold;
-      letter-spacing: 0.2rem;
-      margin-left: 1rem;
-    }
-  
-    .app-bar .desktop-section .appbar-col-1 .logoWrapper img {
-      width: 100%;
-      height: 100%;
-    }
-  
-    .app-bar .desktop-section .appbar-col-2 {
-      display: flex;
-    }
-  
-    .app-bar .desktop-section .appbar-col-2 .col-2-box {
-      /* border:1px solid black; */
-      display: none;
-    }
-  
-    .app-bar .desktop-section .appbar-col-2 .menu {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: "Nunito Sans", Arial, sans-serif;
-      /* border: 1px solid black; */
-      font-weight: 600;
-      font-size: 2rem;
-      opacity: 0.5;
-      margin-right: 1rem;
-    }
-  
-    .app-bar .desktop-section .appbar-col-2 .col-2-box .btn-item {
-      /* border:1px solid black; */
-      height: 2rem;
-      margin: auto;
-      margin-inline-end: 1rem;
-      color: black;
-      font-size: 1.1rem;
-      font-family: "Nunito Sans", Arial, sans-serif;
-    }
-  
-    .app-bar .desktop-section .appbar-col-2 .col-2-box .btn-item:hover {
-      background-color: rgb(200, 241, 200);
-      outline: none;
-      border: none;
-    }
-  
-    /* mobile view navbar */
-  
-    .app-bar .right-side-navbar {
-      background-color: lightblue;
-      width: 100%;
-      position: fixed;
-      right: 0%;
-      top: 0%;
-    }
-  
-    .app-bar .right-side-navbar .col-2-box {
-      padding: 0.5rem 0rem;
-    }
-  
-    .app-bar .right-side-navbar .col-2-box .btn-item {
-      /* border:1px solid black; */
-      width: fit-content;
-      margin: auto;
-      color: black;
-    }
-  }
+:root {
+  --background: black;
+  --border: 1px solid white;
+  --fontColor: white;
+}
+
+/* general css */
+.app-navbar-wrap ul {
+  list-style-type: none;
+}
+
+.app-navbar-wrap ul li {
+  height: 3rem;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+}
+
+.app-navbar-wrap ul li:hover {
+  background-color: rgb(196, 49, 9);
+}
+
+/* general css ends */
+.app-navbar-wrap {
+  width: 100%;
+  height: 6rem;
+  position: fixed;
+  top: 0;
+  text-align: center;
+  color: var(--fontColor);
+  background-color: var(--background);
+  display: grid;
+  grid-template-columns: 20% 80%;
+  z-index: 10;
+}
+
+/* col1 */
+.app-navbar-wrap .col1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.app-navbar-wrap .col1 .dropdown-menu div {
+  padding-left: 2rem;
+  color: white;
+  text-transform: uppercase;
+  width: 15rem;
+}
+
+/* col1 ends */
+
+/* col2 */
+.app-navbar-wrap .col2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+}
+
+.app-navbar-wrap .col2 .navbar-item {
+  padding: 0.5rem 1rem;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.app-navbar-wrap .col2 .navbar-item:hover {
+  background-color: rgb(196, 49, 9);
+}
+
+.app-navbar-wrap .col2 .subcol2-5 {
+  position: relative;
+}
+.app-navbar-wrap .col2 .subcol2-5 .submenu {
+  position: absolute;
+  left: 0;
+  top: 100%;
+  margin-top: 1rem;
+  width: 13rem;
+  background-color: var(--background);
+}
+
+.app-navbar-wrap .col2 .subcol2-5 .submenu li {
+  padding-left: 0;
+  text-align: left;
+  width: 100%;
+}
+
+.app-navbar-wrap .col2 .subcol2-5 .nested-submenu {
+  position: absolute;
+  top: 0%;
+  left: 85%;
+  width: 10rem;
+  background-color: var(--background);
+}
+
+.app-navbar-wrap .col2 .subcol2-5 .nested-submenu li {
+  padding-left: 1rem;
+}
+/* col2 ends */
+@media only screen and (max-width: 680px) {
+}
