--- a/client/src/components/products-landingPages/shop/shop.css
+++ b/client/src/components/products-landingPages/shop/shop.css
@@ -1,3 +1,11 @@
 .shop-page-wrapper {
-    margin-top: 7rem;
+    margin-top: 5rem;
+}
+
+.shop-page-wrapper .bg-image {
+    background-image: url('https://wallpapercrafter.com/desktop/207233-a-busy-japanese-marketplace-street-at-night-lit-up.jpg');
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-position: center center;
 }
