--- a/client/src/components/products-view-details/villa-resort-apartment-details/villa-details.css
+++ b/client/src/components/products-view-details/villa-resort-apartment-details/villa-details.css
@@ -3,20 +3,19 @@
   margin: 7rem auto;
 }
 
-.villa-details-r1 {
-}
+.villa-details-r1 {}
 
-.villa-details-r1 > h3 {
+.villa-details-r1>h3 {
   color: rgb(6, 2, 86);
 }
 
-.villa-details-r1 > p {
+.villa-details-r1>p {
   color: rgb(6, 2, 86);
   font-weight: 500;
   font-size: 14px;
 }
 
-.villa-details-r1 > p > span {
+.villa-details-r1>p>span {
   font-size: 20px;
   margin-right: 5px;
 }
@@ -144,31 +143,19 @@
   /* border: 1px solid black; */
 }
 
-.villa-details-container
-  .villa-details-r3
-  .facility-outer-wrap
-  .facility-inner-wrap {
+.villa-details-container .villa-details-r3 .facility-outer-wrap .facility-inner-wrap {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
 }
 
-.villa-details-container
-  .villa-details-r3
-  .facility-outer-wrap
-  .facility-inner-wrap
-  section {
+.villa-details-container .villa-details-r3 .facility-outer-wrap .facility-inner-wrap section {
   padding: 0.7rem 0.5rem 0.5rem 0.5rem;
   border: 1px solid rgb(218, 225, 241);
   background-color: rgb(238, 240, 244);
 }
 
-.villa-details-container
-  .villa-details-r3
-  .facility-outer-wrap
-  .facility-inner-wrap
-  section
-  h6 {
+.villa-details-container .villa-details-r3 .facility-outer-wrap .facility-inner-wrap section h6 {
   text-transform: uppercase;
   color: rgb(3, 3, 116);
   font-size: 0.8rem;
@@ -208,6 +195,30 @@
   text-transform: uppercase;
 }
 
+.book-site-visit-btn-wrapper {
+  width: 100%;
+  text-align: center;
+  margin-top: 5rem;
+}
+
+.book-site-visit-btn-wrapper button {
+  background-color: #2c49a9;
+  color: #ffff;
+  border: none;
+  font-weight: 500;
+  font-size: 15px;
+  padding: 10px 25px;
+}
+
+.book-site-visit-btn-wrapper button:hover {
+  background-color: #1b2b5e;
+}
+
+.book-site-visit-popup-modal {
+  width: 400px;
+  margin: auto
+}
+
 /* mobile view table ends */
 
 @media only screen and (max-width: 680px) {
@@ -216,21 +227,20 @@
     margin: 7rem auto;
   }
 
-  .villa-details-r1 {
-  }
+  .villa-details-r1 {}
 
-  .villa-details-r1 > h4 {
+  .villa-details-r1>h4 {
     color: rgb(6, 2, 86);
     padding: 0.5rem 1rem;
   }
 
-  .villa-details-r1 > p {
+  .villa-details-r1>p {
     color: rgb(6, 2, 86);
     font-weight: 500;
     font-size: 14px;
   }
 
-  .villa-details-r1 > p > span {
+  .villa-details-r1>p>span {
     font-size: 20px;
     margin-right: 5px;
   }
@@ -336,31 +346,19 @@
     /* border: 1px solid black; */
   }
 
-  .villa-details-container
-    .villa-details-r3
-    .facility-outer-wrap
-    .facility-inner-wrap {
+  .villa-details-container .villa-details-r3 .facility-outer-wrap .facility-inner-wrap {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
   }
 
-  .villa-details-container
-    .villa-details-r3
-    .facility-outer-wrap
-    .facility-inner-wrap
-    section {
+  .villa-details-container .villa-details-r3 .facility-outer-wrap .facility-inner-wrap section {
     padding: 0.7rem 0.5rem 0.5rem 0.5rem;
     border: 1px solid rgb(218, 225, 241);
     background-color: rgb(238, 240, 244);
   }
 
-  .villa-details-container
-    .villa-details-r3
-    .facility-outer-wrap
-    .facility-inner-wrap
-    section
-    h6 {
+  .villa-details-container .villa-details-r3 .facility-outer-wrap .facility-inner-wrap section h6 {
     text-transform: uppercase;
     color: rgb(3, 3, 116);
     font-size: 0.8rem;
@@ -372,6 +370,7 @@
     width: 100%;
     margin-top: 2rem;
   }
+
   .villa-details-container .villa-details-mobile-table table {
     border: 0;
     width: 100%;
@@ -418,5 +417,11 @@
 
   .villa-details-container .villa-details-mobile-table table td:last-child {
     border-bottom: 0;
+  }
+}
+
+@media screen and (max-width: 480px){
+  .book-site-visit-popup-modal {
+    width: 90%;
   }
 }
