--- a/client/src/components/app-bar/AppNavbar.css
+++ b/client/src/components/app-bar/AppNavbar.css
@@ -2,6 +2,7 @@
   --background: black;
   --border: 1px solid white;
   --fontColor: white;
+  --hover-bg: rgb(196, 49, 9);
 }
 
 /* general css */
@@ -16,7 +17,7 @@
 }
 
 .app-navbar-wrap ul li:hover {
-  background-color: rgb(196, 49, 9);
+  background-color: var(--hover-bg);
 }
 
 /* general css ends */
@@ -35,18 +36,49 @@
 
 /* col1 */
 .app-navbar-wrap .col1 {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.app-navbar-wrap .col1 .dropdown-menu div {
-  padding-left: 2rem;
+.app-navbar-wrap .col1 > button {
+  border: 0;
+  outline: none;
   color: white;
+  padding: 0.5rem 1rem;
   text-transform: uppercase;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+.app-navbar-wrap .col1 > button:hover {
+  background-color: var(--hover-bg);
+}
+
+.app-navbar-wrap .col1 .landing-page-submenu {
+  position: absolute;
+  top: 100%;
+  background-color: var(--background);
   width: 15rem;
 }
 
+.app-navbar-wrap .col1 .landing-page-submenu li > span {
+  border-bottom: var(--border);
+}
+
+.app-navbar-wrap .col1 .landing-page-submenu li {
+  text-align: left;
+  text-transform: uppercase;
+}
+
+.app-navbar-wrap .col1 .landing-page-submenu li .landing-page-nested-submenu {
+  position: absolute;
+  top: 0;
+  left: 100%;
+  width: 10rem;
+  background-color: var(--background);
+}
 /* col1 ends */
 
 /* col2 */
