--- a/client/src/components/products-landingPages/land/Land.css
+++ b/client/src/components/products-landingPages/land/Land.css
@@ -6,7 +6,7 @@
   background-size: cover;
   height: calc(100vh - 5rem);
   background-position: center center;
-  background-image: url("https://hbits.co/assets/images/home-banner.webp?auto=format&fit=max&w=1920");
+  background-image: url("https://images.pexels.com/photos/636342/pexels-photo-636342.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
 }
 
 .land-page-container section h4 {
