--- a/client/src/components/products-landingPages/villa/Villa.css
+++ b/client/src/components/products-landingPages/villa/Villa.css
@@ -9,6 +9,22 @@
   background-image: url("https://images.pexels.com/photos/565324/pexels-photo-565324.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
 }
 
+.villa-page-container .bg-image .content {
+  position: absolute;
+  top: 50%;
+  left: 5%;
+  text-align: justify;
+  width: 80%;
+}
+.villa-page-container .bg-image .content h4 {
+  font-size: 2rem;
+  background: -webkit-linear-gradient(rgb(253, 253, 253), rgb(239, 200, 165));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-shadow: 1px 0px 0px rgb(255, 255, 255);
+  font-family: "calibri";
+}
+
 .villa-page-container section h4 {
   color: #334155;
   margin-left: 20px;
