--- a/client/src/components/footer/Footer.css
+++ b/client/src/components/footer/Footer.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
 .footer-wrapper {
+    z-index: 10;
     display: flex;
     width: 100%;
     /* border: 1px solid black; */
@@ -8,6 +9,7 @@
     background-color: black;
     padding-top: 1rem;
     padding-bottom: 2rem;
+    position: relative;
 }
 
 
@@ -99,7 +101,7 @@
         flex-direction: column;
         width: 100%;
         /* border: 1px solid black; */
-        margin-top: 2rem;
+        /* margin-top: 2rem; */
         padding-top: 1rem;
         padding-bottom: 1rem;
     }
