added new froms

--- a/client/src/components/product-forms/resort-form/ResortForm.css
+++ b/client/src/components/product-forms/resort-form/ResortForm.css
@@ -1,17 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500&display=swap");
 
-.villa-form-wrapper * {
+.resort-form-wrapper * {
   font-family: "Montserrat", sans-serif;
 }
 
-.villa-form-wrapper {
+.resort-form-wrapper {
   display: grid;
   user-select: none;
   place-items: center;
   height: calc(100vh - 5rem);
 }
 
-.villa-form-container {
+.resort-form-container {
   width: 1000px;
   padding: 20px;
   overflow: hidden;
@@ -22,7 +22,7 @@
   position: relative;
 }
 
-.villa-form-container > section:first-child {
+.resort-form-container > section:first-child {
   font-weight: 500;
   color: #334155;
   font-size: larger;
